--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vieira Advocacia</title>
     <link rel="stylesheet" href="./assets/css/page/page.css">
-    <link rel="shortcut icon" href="./assets/img/icon.png">
+    <link rel="shortcut icon" href="">
     <script src="https://kit.fontawesome.com/ac1a213ded.js" crossorigin="anonymous"></script>
 </head>
 <body>
