--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
                 <div class="faq">
                     <div class="title active" >
-                        Como funciona a consulta inicial?
+                        <p>Como funciona a consulta inicial?</p>
                         <div>
                             <span></span>
                             <span></span>
@@ -272,7 +272,7 @@
                     <p>
     
                     <div class="title" >
-                        Qual é o custo dos serviços oferecidos?
+                        <p>Qual é o custo dos serviços oferecidos?</p>
                         <div>
                             <span></span>
                             <span></span>
@@ -283,7 +283,7 @@
                     <p>
 
                     <div class="title" >
-                        É necessário agendar a consulta?
+                        <p>É necessário agendar a consulta?</p>
                         <div>
                             <span></span>
                             <span></span>
@@ -294,7 +294,7 @@
                     <p>
     
                     <div class="title" >
-                        Vocês atendem casos de acidente de trabalho em outras cidades?
+                        <p>Vocês atendem casos de acidente de trabalho em outras cidades?</p>
                         <div>
                             <span></span>
                             <span></span>
@@ -305,7 +305,7 @@
                     <p>
 
                     <div class="title" >
-                        Como posso acompanhar o andamento do meu caso?
+                        <p>Como posso acompanhar o andamento do meu caso?</p>
                         <div>
                             <span></span>
                             <span></span>
