--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
     <main>
         <div id="containerAD">
+            <span></span>
+            
             <section class="container">
                 <p class="title" data-anime="top" data-desk>
                     Nosso Diferencial
