--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </p>
 
                 <p class="text">
-                    Visite-nos presencialmente na Avenida Higienópolis, 210, Sala 703,calcule a rota <a href="#">CLICANDO AQUI.</a> Ou entre em contato pelo WhatsApp para agendar a sua consulta. Estamos prontos para lutar pelos seus direitos!
+                    Visite-nos presencialmente na Av. Higienópolis,<b style="color: transparent;">-</b>210 - Sala 703,<b style="color: transparent;">-</b>calcule a rota <a href="#" style="color: #ecbb19;">CLICANDO AQUI.</a> Ou entre em contato pelo WhatsApp para agendar a sua consulta. Estamos prontos para lutar pelos seus direitos!
                 </p>
 
                 <p class="subtitle CTA">
