--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </h1>
 
                 <p class="subtitle">
-                    Advogamos pelos seus direitos trabalhistas e previdenciários. Somos especialistas em causas trabalhistas, incluindo acidentes de trabalho, e auxílio-acidente previdenciário. A qualidade e a empatia no atendimento que você merece.
+                    Advogamos pelos seus direitos trabalhistas e previdenciários. Somos especialistas em causas trabalhistas, incluindo acidentes de trabalho e auxílio-acidente previdenciário. A qualidade e a empatia no atendimento que você merece.
                 </p>
 
                 <p class="text CTA">
@@ -111,7 +111,7 @@
         <div id="container1">
             <section class="container">
                 <p class="title">
-                    Por Que Escolher o Vieira Advocacia?
+                    Por que escolher o Escritório Vieira Advocacia
                 </p>
                 <article class="contents contents2">
                     <div class="content" data-anime="top">
