--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
 
                 <p class="text CTA">
-                    Defenda os seus direitos hoje mesmo!
+                    Defenda seus direitos hoje mesmo!
                 </p>
 
                 <a href="https://wa.me/5543999940615?text=Gostaria%20de%20falar%20com%20um%20advogado!" class="button">
