--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vieira Advocacia</title>
     <link rel="stylesheet" href="./assets/css/page/page.css">
     <link rel="shortcut icon" href="">
-    <script src="https://kit.fontawesome.com/ac1a213ded.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
