--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </p>
 
                 <p class="text CTA">
-                    Experimente a diferença com o Vieira Advocacia.
+                    Experimente a diferença com o Escritório Vieira Advocacia.
                 </p>
 
                 <a href="https://wa.me/5543996529918?text=Gostaria%20de%20falar%20com%20um%20advogado!" class="button">
@@ -150,7 +150,7 @@
                         </p>
     
                         <p class="text">
-                            Atendimento humanizado e personalizado.
+                            Atendimento humanizado e personalizado implica oferecer um serviço com foco no respeito à individualidade de cada cliente.
                         </p>
                     </div>
 
@@ -198,7 +198,7 @@
                 </p>
 
                 <p class="text">
-                    Visite-nos presencialmente na Av. Higienópolis,<b style="color: transparent;">-</b>210 - Sala 703,<b style="color: transparent;">-</b>calcule a rota <a href="#" style="color: #ecbb19;">CLICANDO AQUI.</a> Ou entre em contato pelo WhatsApp para agendar a sua consulta. Estamos prontos para lutar pelos seus direitos!
+                    Visite-nos presencialmente na Av. Higienópolis,<b style="color: transparent;">-</b>210 - Sala 703,<b style="color: transparent;">-</b>calcule a rota <a href="https://maps.app.goo.gl/LxP7jAGnQYAeXtCh8" style="color: #ecbb19;">CLICANDO AQUI.</a> Ou entre em contato pelo WhatsApp para agendar a sua consulta. Estamos prontos para lutar pelos seus direitos!
                 </p>
 
                 <p class="subtitle CTA">
