--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                 <p class="title">
                     Em que podemos te ajudar? 
                 </p>
+                <div class="imagem">
+                    <img src="assets/img/advvieira.jpeg" style="border-radius: 10px; margin-top: 1em; width: 100%;">
+                </div>
                 <article class="contents">
                     <div class="content" data-anime="top">
                         <div class="favicon">
