--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WBLJCRCL');</script>
     <!-- End Google Tag Manager -->
+
+    <style>
+
+        .final.social {
+            display: grid;
+            justify-content: center;
+            margin-top: 1em;
+        }
+
+        .final.social a {
+            color: #fff;
+            font-size: 20px;
+            text-decoration: none;
+        }
+        
+    </style>
+    
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
@@ -340,6 +357,12 @@
                 <a href="https://wa.me/5543996529918?text=Gostaria%20de%20falar%20com%20um%20advogado!" class="button">
                     Converse conosco no WhatsApp
                 </a>
+                <div class="final social">
+                    <a href="https://www.instagram.com/_vieiraadvocacia_">
+                        <i class="fa fa-instagram"></i>
+                        @_vieiraadvocacia_
+                    </a>
+                </div>
             </div>
         </div>
     </main>
