--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </a>
                 <div class="final social">
                     <a href="https://www.instagram.com/_vieiraadvocacia_">
-                        <i class="fa fa-instagram"></i>
+                        <i class="fa-brands fa-instagram"></i>
                         @_vieiraadvocacia_
                     </a>
                 </div>
