--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     Converse conosco no WhatsApp
                 </a>
                 <div class="final social">
-                    <a href="https://www.instagram.com/_vieiraadvocacia_">
+                    <a href="https://www.instagram.com/_vieiraadvocacia_" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                         @_vieiraadvocacia_
                     </a>
